added billing module and work queue with a sample table and basic hookup

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
+
+/* Imports */
+@import 'ag-grid-community/styles/ag-grid.css';
+@import 'ag-grid-community/styles/ag-theme-alpine.css';
+
+
+body {
+  margin: 0;
+  font-family: "Helvetica Neue", sans-serif;
+}
