added some mock data for work queue

--- a/src/app/billing/work-queue/work-queue.component.html
+++ b/src/app/billing/work-queue/work-queue.component.html
@@ -6,7 +6,9 @@
     <ag-grid-angular
       class="ag-theme-alpine"
       [rowData]="rowData"
-      [columnDefs]="columnDefs">
+      [columnDefs]="columnDefs"
+      [defaultColDef]="defaultColDef"
+    >
     </ag-grid-angular>
   </div>
 </div>
