--- a/src/app/billing/work-queue/work-queue.component.html
+++ b/src/app/billing/work-queue/work-queue.component.html
@@ -1,14 +1,13 @@
-<div class="row">
-  <div class="col-12">
-    <h5>Work Queue</h5>
-  </div>
-  <div class="col-12">
-    <ag-grid-angular
-      class="ag-theme-alpine"
-      [rowData]="rowData"
-      [columnDefs]="columnDefs"
-      [defaultColDef]="defaultColDef"
-    >
-    </ag-grid-angular>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-12">
+      <ag-grid-angular
+        class="ag-theme-alpine"
+        [rowData]="rowData"
+        [columnDefs]="columnDefs"
+        [defaultColDef]="defaultColDef"
+      >
+      </ag-grid-angular>
+    </div>
   </div>
 </div>
