--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,11 +1,19 @@
 /* You can add global styles to this file, and also import other style files */
 
 /* Imports */
+@import "bootstrap/dist/css/bootstrap.css";
 @import 'ag-grid-community/styles/ag-grid.css';
 @import 'ag-grid-community/styles/ag-theme-alpine.css';
 
 
 body {
   margin: 0;
-  font-family: "Helvetica Neue", sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
 }
+
+/* AG Grid */
+.ag-header-cell {
+  background-color: #3E82E1;
+}
+
+
