table styling changes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,7 @@
       <img class="breadcrumb_icon" src="assets/icons/chevron_right.svg" alt=""/>
       <span class="nav-item">Work Queue</span>
     </div>
-    <div class="col-12">
+    <div class="col-12 app-container">
       <router-outlet></router-outlet>
     </div>
   </div>
