--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,8 +1,10 @@
+$nav-height: 35px;
+
 .nav-bar {
   background-color: #454546;
   color: white;
   font-size: 0.8rem;
-  height: 35px;
+  height: $nav-height;
   display: flex;
   align-items: center;
 
@@ -22,4 +24,10 @@
   .nav-item {
     cursor: pointer;
   }
+}
+
+.app-container {
+  height: calc(100vh - $nav-height);
+  padding: 10px 5px;
+  background-color: #F6F7FC;
 }
