--- a/src/app/billing/work-queue/work-queue.component.html
+++ b/src/app/billing/work-queue/work-queue.component.html
@@ -6,6 +6,7 @@
         [rowData]="rowData"
         [columnDefs]="columnDefs"
         [defaultColDef]="defaultColDef"
+        [suppressMenuHide]="true"
       >
       </ag-grid-angular>
     </div>
