icon filter and hover changes

--- a/src/app/image-cell-renderer/image-cell-renderer.component.html
+++ b/src/app/image-cell-renderer/image-cell-renderer.component.html
@@ -1,1 +1,1 @@
-<img [src]="'assets/icons/' + params['iconName']">
+<img [src]="'assets/icons/' + params['iconFileName']" [title]="params['title']">
