work queue refactoring

--- a/src/app/billing/work-queue/work-queue.component.html
+++ b/src/app/billing/work-queue/work-queue.component.html
@@ -2,12 +2,12 @@
   <div class="row">
     <div class="col-12">
       <div class="filter-container">
-        <label for="expiry-start-date">EXPIRY START DATE</label><br>
-        <input id="expiry-start-date" type="date" [(ngModel)]="expiryStartDate">
+        <label for="expiry-start-date">FILING EXPIRY START DATE</label><br>
+        <input id="expiry-start-date" type="date" [(ngModel)]="filingExpiryStartDate">
       </div>
       <div class="filter-container">
-        <label for="expiry-end-date">EXPIRY END DATE</label><br>
-        <input id="expiry-end-date" type="date" [(ngModel)]="expiryEndDate">
+        <label for="expiry-end-date">FILING EXPIRY END DATE</label><br>
+        <input id="expiry-end-date" type="date" [(ngModel)]="filingExpiryEndDate">
       </div>
     </div>
 
