--- a/src/app/billing/work-queue/work-queue.component.scss
+++ b/src/app/billing/work-queue/work-queue.component.scss
@@ -6,6 +6,10 @@ ag-grid-angular {
 .filter-container {
   display: inline-block;
   margin-right: 20px;
+
+  input {
+    width: 200px;
+  }
 }
 
 label {
