--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
       <img class="logo" src="https://ehrweb.naiacorp.net/images/CloudCraft.png" alt="CloudCraft">
       <span class="nav-item text-decoration-underline">Billing</span>
       <img class="breadcrumb_icon" src="assets/icons/chevron_right.svg" alt=""/>
-      <span class="nav-item">Work Queue</span>
+      <span class="nav-item">Timely Filing Work Queue</span>
     </div>
     <div class="col-12 app-container">
       <router-outlet></router-outlet>
