--- a/src/app/billing/work-queue-poc-form/work-queue-poc-form.component.html
+++ b/src/app/billing/work-queue-poc-form/work-queue-poc-form.component.html
@@ -1,83 +1,101 @@
 <div class="container">
   <h2 class="header text-center">WORK QUEUE</h2>
   <div class="body" *ngFor="let data of formData">
-    <div class="">NAME : {{data.Name}}</div>
-    <div class="">DESCRIPTION : {{data.Description}}</div>
+    <div class="d-flex justify-content-between">NAME : <input type="text" [(ngModel)]="data.Name"></div>
+    <div class="d-flex justify-content-between mt-4">DESCRIPTION : <input type="text" [(ngModel)]="data.Description">
+    </div>
 
-    <div class="roles d-flex mt-4">
-      <div class="available">
-        <h4>Available Roles</h4>
-        <div>
-          <div *ngFor="let roles of data.VisibleForRoles; let $rolesIndex = index">
-            <span>{{roles}}</span>
+    <div class="roles mt-4">
+      <h5>Roles</h5>
+      <div class="inner-body d-flex">
+        <div class="available">
+          <h6>Available</h6>
+          <div class="data-container">
+            <div (click)="onRoleClicked('available', role)" *ngFor="let role of data.VisibleForRoles; let $rolesIndex = index">
+              <span>{{role}}</span>
+            </div>
           </div>
         </div>
-      </div>
-      <div class="selected">
-        <h4>Selected Roles</h4>
-        <div>
-          <div *ngFor="let roles of data.VisibleForRoles; let $rolesIndex = index">
-            <span></span>
+        <div class="selected">
+          <h6>Selected</h6>
+          <div class="data-container">
+            <div (click)="onRoleClicked('selected', role)" *ngFor="let role of selectedRoles; let $rolesIndex = index">
+              <span>{{role}}</span>
+            </div>
           </div>
         </div>
       </div>
     </div>
 
-    <div class="collections d-flex mt-4">
-      <div class="available">
-        <h4>Available Collections</h4>
-        <div>
-          <div *ngFor="let collection of data.Collections">
-            <span>{{collection}}</span>
+    <div class="collections mt-4">
+      <h5>Collections</h5>
+      <div class="inner-body d-flex">
+        <div class="available">
+          <h6>Available</h6>
+          <div class="data-container">
+            <div (click)="onCollectionClicked('available', collection)" *ngFor="let collection of data.Collections">
+              <span>{{collection}}</span>
+            </div>
+          </div>
+        </div>
+        <div class="selected">
+          <h6>Selected</h6>
+          <div class="data-container">
+            <div (click)="onCollectionClicked('selected', collection)" *ngFor="let collection of selectedCollections">
+              <span>{{collection}}</span>
+            </div>
           </div>
         </div>
       </div>
-      <div class="selected">
-        <h4>Selected Collections</h4>
-        <div>
-          <div *ngFor="let collection of data.Collections">
-            <span></span>
+
+    </div>
+
+    <div class="fields mt-4">
+      <h5>Fields</h5>
+      <div class="inner-body d-flex">
+        <div class="available">
+          <h6>Available Fields</h6>
+          <div class="data-container">
+            <div (click)="onFieldClicked('available', field.Field)" *ngFor="let field of data.Fields">
+              <span>{{field.Field}}</span>
+            </div>
+          </div>
+        </div>
+        <div class="selected">
+          <h6>Selected Fields</h6>
+          <div class="data-container">
+            <div (click)="onFieldClicked('selected', field)" *ngFor="let field of this.selectedFields">
+              <span>{{field}}</span>
+            </div>
           </div>
         </div>
       </div>
     </div>
 
-    <div class="fields d-flex mt-4">
-      <div class="available">
-        <h4>Available Fields</h4>
-        <div>
-          <div *ngFor="let field of data.Fields">
-            <span>{{field.Field}}</span>
+    <div class="actions mt-4">
+      <h5>Actions</h5>
+      <div class="inner-body d-flex">
+        <div class="available">
+          <h6>Available</h6>
+          <div class="data-container">
+            <div (click)="onActionClicked('available', action.Action)" *ngFor="let action of data.Actions">
+              <span>{{action.Action}}</span>
+            </div>
           </div>
         </div>
-      </div>
-      <div class="selected">
-        <h4>Selected Fields</h4>
-        <div>
-          <div *ngFor="let field of data.Fields">
-            <span></span>
+        <div class="selected">
+          <h6>Selected</h6>
+          <div class="data-container">
+            <div (click)="onActionClicked('selected', action)" *ngFor="let action of selectedActions">
+              <span>{{action}}</span>
+            </div>
           </div>
         </div>
       </div>
     </div>
 
-    <div class="actions d-flex mt-4">
-      <div class="available">
-        <h4>Available Actions</h4>
-        <div>
-          <div *ngFor="let action of data.Actions">
-            <span>{{action.Action}}</span>
-          </div>
-        </div>
-      </div>
-      <div class="selected">
-        <h4>Selected Actions</h4>
-        <div>
-          <div *ngFor="let action of data.Actions">
-            <span></span>
-          </div>
-        </div>
-      </div>
+    <div class="submit-btn mt-4">
+      <button>SUBMIT</button>
     </div>
   </div>
 </div>
