--- a/src/app/billing/work-queue-poc-form/work-queue-poc-form.component.scss
+++ b/src/app/billing/work-queue-poc-form/work-queue-poc-form.component.scss
@@ -2,11 +2,21 @@
     margin-left: 20px;
 }
 
-.selected, .available{
-    border: 1px solid black;
-    padding: 10px;
+.body > div {
+  width: 400px;
 
-    & div > div{
-        cursor: pointer;
-    }
+  & input {
+    width: 200px;
+  }
+}
+
+.data-container{
+  border: 1px solid black;
+  padding: 10px;
+  width: 220px;
+  min-height: 100px;
+
+  & div{
+    cursor: pointer;
+  }
 }
