GMCB-138: added transition styling on hover

--- a/src/app/billing/work-queue-poc-form/work-queue-poc-form.component.scss
+++ b/src/app/billing/work-queue-poc-form/work-queue-poc-form.component.scss
@@ -18,5 +18,12 @@
 
   & div{
     cursor: pointer;
+    transition: 0.3s ease;
+    padding: 5px;
+    border-radius: 5px;
+  }
+
+  & div:hover{
+    background: #D3D3D3;
   }
 }
